# estate_kit_odoo

./: .env.example  .gitignore  .rsyncignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: deploy.md
.claude/skills/crm-stages/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/docs-access/: SKILL.md
.claude/skills/permissions/: SKILL.md
.claude/skills/server-ops/: SKILL.md
.claude/skills/web_testing/: SKILL.md
addons/: .rsyncignore
addons/base_sparse_field/: __manifest__.py
addons/base_sparse_field/models/: fields.py
addons/estate_kit/: ROLES.md  __init__.py  __manifest__.py  hooks.py
addons/estate_kit/controllers/: __init__.py  image.py  image_upload.py  webhook.py  ymaps_proxy.py
addons/estate_kit/data/: crm_stages.xml  estate_city_data.xml  estate_cron.xml  estate_deal_sequence.xml  estate_district_data.xml  estate_lead_match_stage_data.xml  estate_property_tag_data.xml  estate_source_data.xml  ir_config_parameter.xml  market_snapshot_cron.xml  matching_cron.xml
addons/estate_kit/docs/: INTEGRATIONS.md  LEAD_SERVICES.md  MARKET_PRICING.md  SPECIFICATION.md
addons/estate_kit/models/: __init__.py  crm_lead.py  estate_appliance.py  estate_city.py  estate_climate_equipment.py  estate_deal.py  estate_deal_participant.py  estate_district.py  estate_property.py  estate_property_image.py  estate_property_placement.py  estate_property_scoring.py  estate_property_tier.py  estate_property_webhook_mixin.py  estate_source.py  estate_street.py  estatekit_webhook_event.py  res_config_settings.py  res_partner.py  res_users.py
addons/estate_kit/security/: estate_security.xml  ir.model.access.csv
addons/estate_kit/services/: __init__.py  anthropic_client.py  api_client.py  geocoder.py  image_service_client.py  image_sync_service.py  krisha_parser.py  pool_score_service.py  property_import_service.py  property_sync_service.py
addons/estate_kit/src/: __init__.py
addons/estate_kit/views/: commission_report_views.xml  crm_lead_views.xml  estate_deal_menus.xml  estate_deal_views.xml  estate_district_views.xml  estate_kit_log_views.xml  estate_lead_match_views.xml  estate_market_snapshot_views.xml  estate_menus.xml  estate_placement_views.xml  estate_property_tier_views.xml  estate_property_views.xml  estate_residential_complex_views.xml  estate_source_views.xml  public_view_templates.xml  res_config_settings_views.xml  res_partner_views.xml  res_users_views.xml
addons/estate_kit/wizards/: __init__.py  commission_report_wizard.py  krisha_parser_preview.py  krisha_parser_result.py  krisha_parser_views.xml  (+1 more)
addons/royal_estate/: ROLES.md  __manifest__.py  hooks.py
addons/server_environment/: __manifest__.py
dev/: .env.example  Caddyfile  compose.yaml
docker/: .env.example  Caddyfile  compose.yaml
docs/tech-docs/: mkdocs.yml  pyproject.toml
docs/user-docs/: mkdocs.yml  pyproject.toml
hurl/: anthropic_models.hurl  run.sh
podman/: .env.example  compose.yaml  odoo.conf
stubs/odoo/: __init__.pyi  api.pyi  exceptions.pyi  fields.pyi  http.pyi  models.pyi
todos/: 002-area-land-visibility.yaml  004-water-visibility.yaml  005-sewage-visibility.yaml  006-remove-security-bars.yaml  007-bathroom-selection-update.yaml  008-balcony-add-terrace.yaml  009-basic-statuses.yaml  010-api-settings.yaml  011-api-http-client.yaml  012-sync-fields.yaml  013-push-to-api.yaml  014-pull-from-api.yaml  015-retry-cron.yaml  016-mls-tab.yaml  017-auto-mls-setting.yaml  018-sync-references.yaml  019-sync-owners.yaml  020-sync-photos.yaml  021-webhook-secret-settings.yaml  022-webhook-controller.yaml  023-idempotency-model.yaml  024-handlers-property-events.yaml  025-handlers-mls-events.yaml  026-handler-contact-request.yaml  027-reduce-polling-fallback.yaml  028-webhook-auto-registration.yaml  029-dev-deploy-caddy.yaml  030-expand-state-selection.yaml  031-update-api-map-transitions.yaml  032-update-views.yaml  033-locked-by-agency.yaml  034-update-webhooks.yaml  035-data-migration.yaml  036-remove-mls-crons.yaml  037-mls-warning-banner.yaml  038-lock-webhook-handler.yaml  039-api-webhook-registration.yaml  039-split-god-class-estate-property.yaml  040-extract-geocoder-service.yaml  041-split-action-import-selected.yaml  (+107 more)
(+595 files in other folders)
